# stonex-serverless-poc

./: .gitignore  README.md  databricks.yml  pyproject.toml
notebooks/: cost_analysis.py  run_benchmark.py
resources/: analysis_job.yml  benchmark_job.yml
src/tpch_benchmark/: queries.py  runner.py
